Relatório fase beta

--- a/ces.sincroapp/app/src/main/res/layout/fragment_cc_number_input.xml
+++ b/ces.sincroapp/app/src/main/res/layout/fragment_cc_number_input.xml
@@ -39,8 +39,8 @@
         android:id="@+id/cc_number_input_fragment_ccNumberPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="@string/cc_number_input_fragment_prompt_cc_number"
-        android:hint="@string/cc_number_input_fragment_prompt_cc_number"
+        android:autofillHints="@string/cc_number_label"
+        android:hint="@string/cc_number_label"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:id="@+id/cc_number_input_fragment_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cc_number_input_fragment_submit_button"
+        android:text="@string/submit_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
