--- a/ces.sincroapp/app/src/main/res/layout/fragment_verification_code.xml
+++ b/ces.sincroapp/app/src/main/res/layout/fragment_verification_code.xml
@@ -5,7 +5,7 @@
     android:id="@+id/information_review_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.register.InformationReviewFragment">
+    tools:context=".ui.register.VerificationCodeFragment">
 
     <TextView
         android:id="@+id/cc_number_label"
@@ -14,23 +14,23 @@
         android:text="@string/information_review_fragment_label_cc_number"
         android:textAppearance="@style/ShapeAppearance.MaterialComponents.LargeComponent"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/confirmation_code_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="0.1" />
 
     <TextView
         android:id="@+id/cc_number_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="123456789"
+        app:layout_constraintBottom_toTopOf="@+id/confirmation_code_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cc_number_label"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="0.15" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:text="@string/information_review_fragment_label_email"
         android:textAppearance="@style/ShapeAppearance.MaterialComponents.LargeComponent"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/confirmation_code_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cc_number_label"
@@ -48,19 +48,19 @@
         app:layout_constraintHorizontal_bias="0.07" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/emailField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="raf*************@gmail.com"
+        app:layout_constraintBottom_toTopOf="@+id/confirmation_code_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cc_number_label"
         app:layout_constraintTop_toTopOf="@+id/cc_number_field"
-        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="0.15" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/confirmation_code_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="50dp"
@@ -68,9 +68,34 @@
         android:text="@string/sent_email_text"
         android:textAlignment="center"
         android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/verification_code_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_label"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <EditText
+        android:id="@+id/verification_code_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="@string/verification_code_input"
+        android:hint="@string/verification_code_input"
+        android:textAlignment="center"
+        android:ems="9"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/submit_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/verification_code_input"
+        app:layout_constraintVertical_bias="0.15" />
 </androidx.constraintlayout.widget.ConstraintLayout>
