--- a/ces.sincroapp/app/src/main/res/layout/activity_login.xml
+++ b/ces.sincroapp/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="@string/prompt_email"
-        android:hint="@string/prompt_email"
+        android:autofillHints="@string/email_label"
+        android:hint="@string/email_label"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
