--- a/ces.sincroapp/app/src/main/res/layout/fragment_cc_number_input.xml
+++ b/ces.sincroapp/app/src/main/res/layout/fragment_cc_number_input.xml
@@ -14,7 +14,7 @@
         android:text="@string/register_title"
         android:textAppearance="@style/ShapeAppearance.MaterialComponents.LargeComponent"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/cc_number_input_fragment_ccNumberPrompt"
+        app:layout_constraintBottom_toBottomOf="@+id/cc_number_input"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,14 +29,14 @@
         android:text="@string/cc_number_input_fragment_summary_text"
         android:textAlignment="center"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/cc_number_input_fragment_ccNumberPrompt"
+        app:layout_constraintBottom_toTopOf="@+id/cc_number_input"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cc_number_input_fragment_registerTitle" />
 
     <EditText
-        android:id="@+id/cc_number_input_fragment_ccNumberPrompt"
+        android:id="@+id/cc_number_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints="@string/cc_number_label"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/cc_number_input_fragment_submit"
+        android:id="@+id/cc_number_input_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit_button"
